welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:7: error: type mismatch;
 found   : Int(42)
 required: Boolean
  	return 42
               ^